Fixed layout issues

--- a/src/components/about/TeamSection/teamSection.module.scss
+++ b/src/components/about/TeamSection/teamSection.module.scss
@@ -90,7 +90,7 @@
       margin-bottom: 20px;
       cursor: pointer;
 
-      @media screen and (min-width: 1441px) {
+      @media screen and (min-width: 1600px) {
         width: 200px;
         height: 200px;
       }
